@@ -3,7 +3,7 @@ import unittest, os
 from mako.util import py3k
 from mako.util import function_named
 import re
-
+from mako.cache import CacheImpl, register_plugin
 from nose import SkipTest
 
 
@@ -11,34 +11,34 @@ template_base = os.path.join(os.path.dirname(__file__), 'templates')
 module_base = os.path.join(template_base, 'modules')
 
 class TemplateTest(unittest.TestCase):
- 
+
     def _file_template(self, filename, **kw):
         filepath = self._file_path(filename)
         return Template(uri=filename, filename=filepath,
                             module_directory=module_base, **kw)
- 
+
     def _file_path(self, filename):
         name, ext = os.path.splitext(filename)
- 
+
         if py3k:
             py3k_path = os.path.join(template_base, name + "_py3k" + ext)
             if os.path.exists(py3k_path):
                 return py3k_path
- 
+
         return os.path.join(template_base, filename)
- 
-    def _do_file_test(self, filename, expected, filters=None, 
+
+    def _do_file_test(self, filename, expected, filters=None,
                         unicode_=True, template_args=None, **kw):
         t1 = self._file_template(filename, **kw)
-        self._do_test(t1, expected, filters=filters, 
+        self._do_test(t1, expected, filters=filters,
                         unicode_=unicode_, template_args=template_args)
- 
-    def _do_memory_test(self, source, expected, filters=None, 
+
+    def _do_memory_test(self, source, expected, filters=None,
                         unicode_=True, template_args=None, **kw):
         t1 = Template(text=source, **kw)
-        self._do_test(t1, expected, filters=filters, 
+        self._do_test(t1, expected, filters=filters,
                         unicode_=unicode_, template_args=template_args)
- 
+
     def _do_test(self, template, expected, filters=None, template_args=None, unicode_=True):
         if template_args is None:
             template_args = {}
@@ -46,11 +46,11 @@ class TemplateTest(unittest.TestCase):
             output = template.render_unicode(**template_args)
         else:
             output = template.render(**template_args)
- 
+
         if filters:
             output = filters(output)
         eq_(output, expected)
- 
+
 def eq_(a, b, msg=None):
     """Assert a == b, with repr messaging on failure."""
     assert a == b, msg or "%r != %r" % (a, b)
@@ -65,7 +65,7 @@ def assert_raises(except_cls, callable_, *args, **kw):
         success = False
     except except_cls, e:
         success = True
- 
+
     # assert outside the block so it works for AssertionError too !
     assert success, "Callable did not raise an exception"
 
@@ -106,4 +106,30 @@ def requires_no_pygments(fn):
         import pygments
     except:
         pygments = None
-    return skip_if(lambda:pygments is not None)(fn)
+    return skip_if(lambda: pygments is not None)(fn)
+
+class PlainCacheImpl(CacheImpl):
+    """Simple memory cache impl so that tests which
+    use caching can run without beaker.  """
+
+    def __init__(self, cache):
+        self.cache = cache
+        self.data = {}
+
+    def get_or_create(self, key, creation_function, **kw):
+        if key in self.data:
+            return self.data[key]
+        else:
+            self.data[key] = data = creation_function(**kw)
+            return data
+
+    def put(self, key, value, **kw):
+        self.data[key] = value
+
+    def get(self, key, **kw):
+        return self.data[key]
+
+    def invalidate(self, key, **kw):
+        del self.data[key]
+
+register_plugin("plain", __name__, "PlainCacheImpl")
